add music aside

--- a/themes/Butterfly/languages/default.yml
+++ b/themes/Butterfly/languages/default.yml
@@ -68,6 +68,9 @@ aside:
     site_uv_name: UV
     site_pv_name: PV
   card_ads: wechat
+  card_map: Vistor maps
+  card_ip: Welcome
+  aplayer: music
 donate: Donate
 share: Share
 
