--- a/themes/Butterfly/languages/en.yml
+++ b/themes/Butterfly/languages/en.yml
@@ -71,6 +71,7 @@ aside:
   card_map: Vistor maps
   card_ip: Welcome
   aplayer: music
+  card_clock: minor clock
 donate: Donate
 share: Share
 bookmark:
