--- a/source/_posts/2019.md
+++ b/source/_posts/2019.md
@@ -8,7 +8,7 @@ categories:
 comments: true
 cover: /img/2019/cover.jpg
 top_img: /img/2019/top.jpg
-top: true
+# top: true
 ---
 <meta name="referrer" content="no-referrer" /><!--页面头部添加-->
 
